# src/main/kotlin/uk/gov/dluhc/emsintegrationapi/rest/AdminController.kt
@@ -4,9 +4,11 @@ import mu.KotlinLogging
 import org.springframework.web.bind.annotation.CrossOrigin
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.RestController
 import uk.gov.dluhc.emsintegrationapi.mapper.AdminPendingEmsDownloadMapper
 import uk.gov.dluhc.emsintegrationapi.mapper.AdminPendingRegisterCheckMapper
+import uk.gov.dluhc.emsintegrationapi.models.AdminPendingChecksAndDownloadsSummaryResponse
 import uk.gov.dluhc.emsintegrationapi.models.AdminPendingEmsDownloadsResponse
 import uk.gov.dluhc.emsintegrationapi.service.AdminService
 import uk.gov.dluhc.registercheckerapi.models.AdminPendingRegisterChecksResponse
@@ -41,6 +43,18 @@ class AdminController(
             pendingEmsDownloads = adminService.adminGetPendingEmsDownloads(eroId).map(
                 adminPendingEmsDownloadMapper::adminPendingEmsDownloadEntityToAdminPendingEmsDownloadModel
             )
+        )
+    }
+
+    @GetMapping("/admin/pending-checks-and-downloads-summary")
+    fun adminGetPendingChecksAndDownloadsSummary(
+        @RequestParam userSelectedPendingMinAgeInDays: Int? = 5
+    ): AdminPendingChecksAndDownloadsSummaryResponse {
+        logger.info("Getting admin pending checks and downloads summary")
+
+        return AdminPendingChecksAndDownloadsSummaryResponse(
+            pendingRegisterChecks = adminService.adminGetPendingRegisterChecksSummary(),
+            pendingEmsDownloads = adminService.adminGetPendingEmsDownloadsSummary(),
         )
     }
 }
